--- a/src/style.css
+++ b/src/style.css
@@ -5,25 +5,57 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  
+  padding: 0px;
+  margin: 0px;
 }
 
 body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  padding: 0px;
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  resize: both;
+  overflow: auto;
+  display: grid;
+  grid-template-rows: repeat(5, minmax(100px, 1fr));
+  grid-template-columns: repeat(6, minmax(100px, 1fr));
+  grid-template-areas: "sidebar header header header header header" 
+                       "sidebar main-content main-content main-content main-content main-content"
+                       "sidebar main-content main-content main-content main-content main-content"
+                       "sidebar main-content main-content main-content main-content main-content"
+                       "sidebar main-content main-content main-content main-content main-content";
+  height: 100vh;
+  width: 100vw;
+  margin: 0px;
   padding: 2rem;
   text-align: center;
 }
+
+.header {
+  grid-area: header;
+  background-color: white;
+}
+
+.main-content {
+  grid-area: main-content;
+  background-color: gray;
+}
+
+.sidebar {
+  grid-area: sidebar;
+  background-color: cornflowerblue;
+}
+
+
+
