--- a/src/style.css
+++ b/src/style.css
@@ -19,26 +19,23 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  width: 100vw;
-  height: 100vh;
-  padding: 0px;
+  padding: 0px 0px 0px 0px;
 }
 
 #app {
   resize: both;
-  overflow: auto;
   display: grid;
   grid-template-rows: repeat(5, minmax(100px, 1fr));
-  grid-template-columns: repeat(6, minmax(100px, 1fr));
-  grid-template-areas: "sidebar header header header header header" 
-                       "sidebar main-content main-content main-content main-content main-content"
-                       "sidebar main-content main-content main-content main-content main-content"
-                       "sidebar main-content main-content main-content main-content main-content"
-                       "sidebar main-content main-content main-content main-content main-content";
+  grid-template-columns: repeat(9, minmax(100px, 1fr));
+  grid-template-areas: "sidebar sidebar header header header header header header header" 
+                       "sidebar sidebar main-content main-content main-content main-content main-content main-content main-content"
+                       "sidebar sidebar main-content main-content main-content main-content main-content main-content main-content"
+                       "sidebar sidebar main-content main-content main-content main-content main-content main-content main-content"
+                       "sidebar sidebar main-content main-content main-content main-content main-content main-content main-content";
   height: 100vh;
   width: 100vw;
   margin: 0px;
-  padding: 2rem;
+  padding: 0px;
   text-align: center;
 }
 
@@ -53,6 +50,10 @@ body {
 }
 
 .sidebar {
+  display: grid;
+  grid-template-rows: 10vh 30vh 15vh;
+  grid-template-columns: 100%;
+  column-gap: 5vh;
   grid-area: sidebar;
   background-color: cornflowerblue;
 }
