--- a/src/style.css
+++ b/src/style.css
@@ -36,11 +36,22 @@ body {
   text-align: center;
 }
 
+#search-input {
+  width: 30vw;
+}
+
 .header {
+  display: grid;
+  grid-template-rows: repeat(2, 50%);
+  grid-template-columns: auto;
   grid-area: header;
   background-color: white;
 }
 
+.header__container {
+  display: flex;
+  justify-content: space-between;
+}
 .main-content {
   grid-area: main-content;
   background-color: gray;
