--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, 'Courier New', Courier, monospace, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -40,22 +40,60 @@ body {
   width: 30vw;
 }
 
+.bold {
+  font-weight: 700;
+}
+
 .header {
   display: grid;
   grid-template-rows: repeat(2, 50%);
   grid-template-columns: auto;
   grid-area: header;
   background-color: white;
+  color: gray;
 }
 
 .header__container {
   display: flex;
   justify-content: space-between;
+  flex: 1;
+  margin-right: 2vw;
 }
+
+.header__container__buttons {
+  display: flex;
+  justify-content: center;
+  gap: 2vw;
+  width: 30%;
+  flex: 0 0 auto;
+}
+
+.header__container__buttons button{
+  width: 6vw;
+  height: 4vh;
+  border-radius: 1rem;
+  background-color: cornflowerblue;
+  border: none;
+}
+
+.header__container__welcome__message {
+  text-align: left;
+}
+
+.header__container__welcome__message p{
+  color: black;
+  margin: 0px;
+}
+
+.large {
+  font-size: 1.2rem;
+}
+
 .main-content {
   grid-area: main-content;
   background-color: gray;
 }
+
 
 .sidebar {
   display: grid;
@@ -84,4 +122,6 @@ body {
   text-align: left;
 }
 
-
+.small {
+  font-size: 0.8rem;
+}
