--- a/src/style.css
+++ b/src/style.css
@@ -89,11 +89,38 @@ body {
   font-size: 1.2rem;
 }
 
-.main-content {
-  grid-area: main-content;
-  background-color: gray;
+.left-align {
+  text-align: left;
 }
 
+.main-content {
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-template-rows: 100%;
+  grid-area: main-content;
+  background-color: rgb(202, 206, 211);
+}
+
+.main-content__projects p {
+  color: black;
+  margin: 2vh;
+}
+
+.main-content__projects__cards {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: repeat(2, 40%);
+  grid-template-rows: repeat(3, 30%);
+}
+
+.main-content__projects__cards__card {
+  width: 90%;
+  height: 90%;
+  background-color: white;
+  margin: 2%;
+  border-radius: 1rem;
+}
 
 .sidebar {
   display: grid;
