--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,15 @@ body {
   padding: 0px 0px 0px 0px;
 }
 
+li img {
+  height: 24px;
+  width: 24px;
+  align-self: center;
+  filter: brightness(0) invert(1);
+  margin-left: 0px;
+  margin-right: 2vw;
+}
+
 #app {
   resize: both;
   display: grid;
@@ -185,6 +194,11 @@ body {
 .sidebar__header {
   font-size: 1.5rem;
   font-weight: 900;
+}
+
+.sidebar__navigation li{
+  display: flex;
+  align-items: center;
 }
 
 .sidebar__navigation  a {
